<resources>
    <string name="app_name">Sokoban</string>
    <string name="titlescreen_app_name">Sokoban</string>
    <string name="titlescreen_app_name_japanese">倉庫番</string>
    <string name="settings">Settings</string>
    <string name="selectLevel">Play!</string>
    <string name="statistics">Statistics</string>
    <string name="play">Play Level</string>
    <string name="levelLoadError">error loading level files, please try again</string>
    <string name="won_good">Good Job!</string>
    <string name="won_perfect">Perfect!</string>
    <string name="won_newbest">New Best!</string>
    <string name="score_current">Current Score:</string>
    <string name="score_best">Best Score:</string>
    <string name="score_minimal">Minimal Score:</string>
    <string name="button_levels">Levels</string>
    <string name="button_restart">Restart</string>
    <string name="quit">QUIT</string>
    <string name="credits">Credits</string>
    <string name="creditsText">Developers: \n
                                            Thomas Berghuis \n
                                            Steven Bronsveld \n
                                            Jelmer Firet \n
                                            Robert Koprinkov \n
                                            Bram Pulles \nGraphics:\n
                                Thijs van Loenhout</string>
    <string name="step_counter">0</string>
    <string name="control_button">Controls: buttons</string>
    <string name="control_swipe">Controls: swipe</string>
    <string name="audio_muted">Audio: muted</string>
    <string name="audio_enabled">Audio: enabled</string>
    <string name="donut_mode_steps_left">put %d more steps!</string>
    <string name="donut_enabled">Donut mode: enabled</string>
    <string name="donut_disabled">Donut mode: disabled</string>
    <string name="statistics_distance">"You have set %d steps. That means you burned %.2f calories! Keep it up!"</string>
</resources>
