<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="608dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:srcCompat="@color/colorPrimaryDark"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/levelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickLevelSelect"
            android:text="@string/selectLevel" />

        <Button
            android:id="@+id/statisticsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickStatistics"
            android:text="@string/statistics" />

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickSettings"
            android:text="@string/settings" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>